[metadata]
name = raudio-server
version = 0.0.1
author = Raudio Project
author_email = ndlug@nd.edu
description = Self-hosted music streaming server
url = https://raudio-project.github.io
classifiers =
	Programming Language :: Python :: 3
	License :: OSI Approved :: GNU General Public License v3 (GPLv3)

[options]
package_dir =
	= src
packages = find:
python_requires = >=3.7
