[metadata]
name = raudio-server
version = 0.1.0
author = Raudio Project
author_email = ndlug@nd.edu
description = Self-hosted music streaming server
long_description = file: README.md
long_description_content_type = text/markdown
url = https://raudio-project.github.io
classifiers =
	Programming Language :: Python :: 3
	License :: OSI Approved :: GNU General Public License v3 (GPLv3)

[options]
packages = raudio_server
python_requires = >=3.7
install_requires =
	ffmpeg-python==0.2.0
	flask==2.1.1
	requests==2.27.1
